# kiblast

./: .flake8  README.md  pyproject.toml
.kiblast/: kiblast_cfg.toml
kiblast/: __init__.py  config.py  datafiles.py  defs.py  eeschema_xml.py  kiblast.py
resources/bitmap-src/: splash.xcf
tests/: test_kiblast.py
