[tool.poetry]
name = "KiBlast"
version = "0.1.0"
description = ""
authors = ["Steven Johnson <sakurainds@gmail.com>"]
license="GPL-3.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mypy = "^0.740.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
