[tool.poetry]
name = "KiBlast"
version = "0.1.0"
description = "Kicad Bom Generator/Costing"
authors = ["Steven Johnson <sakurainds@gmail.com>"]
license="GPL-3.0"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Manufacturing",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",    
]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mypy = "^0.740.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
